<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1A1A1A"
    android:padding="6dp"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="45dp"
        android:text="@string/status_welcome"
        android:textColor="#33B5E5"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:background="#1A1A1A"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="0dp"
        android:radius="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_theme_switch"
            android:textColor="#33B5E5"
            android:textSize="24sp"
            android:layout_marginBottom="15dp"/>
        <RadioGroup
            android:id="@+id/theme_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rb_dark_mode"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:text="@string/theme_dark"
                android:textColor="#33B5E5"
                android:drawablePadding="10dp"
                android:paddingVertical="10dp"
                android:background="?selectableItemBackground"/>
            <RadioButton
                android:id="@+id/rb_light_mode"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:text="@string/theme_light"
                android:textColor="#33B5E5"
                android:drawablePadding="10dp"
                android:paddingVertical="10dp"
                android:background="?selectableItemBackground"/>
            <RadioButton
                android:id="@+id/rb_transparent_mode"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:text="@string/theme_trans"
                android:textColor="#33B5E5"
                android:drawablePadding="10dp"
                android:paddingVertical="10dp"
                android:background="?selectableItemBackground"/>
            <RadioButton
                android:id="@+id/rb_glass_mode"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:text="@string/theme_glass"
                android:textColor="#33B5E5"
                android:drawablePadding="10dp"
                android:paddingVertical="10dp"
                android:background="?selectableItemBackground"/>
        </RadioGroup>
        <Button
            android:id="@+id/btn_grant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_grant_permission"
            android:textColor="#000000"
            android:background="#33B5E5"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textSize="16sp"
            android:visibility="gone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="0dp"
            android:text="@string/guide_add_widget"
            android:textColor="#33B5E5"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_welcome"
        android:textColor="#33B5E5"
        android:textSize="32sp"
        android:layout_marginBottom="0dp"/>

    </LinearLayout>